# israel-prices

./: .gitignore  Cargo.toml  README.md  assumptions.md  curate_data_raw.sh  download_all.sh  generate_processed_data.sh  index.html  manual_curation_notes.txt  normalize.sh  output.txt  prices.html  run.sh  run_all.sh  stores.html  xml_to_csv.sh  xml_to_json.sh
processed_data_generator/: Cargo.toml
processed_data_generator/src/: processed_data_generator.rs
raw_downloader/: Cargo.toml
raw_downloader/src/: main.rs  parallel_download.rs  store.rs
xml_to_json/: Cargo.toml
xml_to_json/src/: xml_to_json.rs
xml_to_standard/: Cargo.toml  README.md  test.sh
xml_to_standard/data_test/: PriceFull7290055700007-0037-202211020510  PriceFull7290058134977-001-202211021055  PriceFull7290058159628-001-202211021214  PriceFull7290058160839-001-202211020533  PriceFull7290058173198-003-202211021220  PriceFull7290058197699-044-202211021300  PriceFull7290058198450-003-202211021000  PriceFull7290103152017-001-202211021400  PriceFull7290644700005-100-202211020110  PriceFull7290725900003-0002-202211020510  PriceFull7290875100001-002-202211020354-001.xml  PriceFull7291056200008-299-202211020010  Stores0000072906390-202211021530.xml  Stores7290027600007-000-202211020201  Stores7290055700007-202211020001.xml  Stores7290055700014-202211020001.xml  Stores7290058140886-202211012005.xml  Stores7290103152017-202211020805.xml  Stores7290492000005-202211020200.xml  Stores7290526500006-202211020900.xml  Stores7290644700005-202211020600.xml  Stores7290700100008-202211012005.xml  Stores7290725900003-202211020001.xml  Stores7290785400000-202211012255.xml  Stores7290803800003-202211020100.xml  Stores7290873255550-202211012005.xml  Stores7290876100000-202211020900.xml  Stores7291056200008-202211012005.xml  Stores7291059100008-202210312255.xml  StoresFull7290058108879-000-202211021115  StoresFull7290058134977-000-202211021055  StoresFull7290058148776-000-202211021009  StoresFull7290058159628-000-202211021214  StoresFull7290058160839-000-202211020533  StoresFull7290058173198-000-202211021220  StoresFull7290058197699-000-202211021300  StoresFull7290058198450-000-202211021000  StoresFull7290172900007--202211020200  StoresFull7290455000004-000-202211020538-000.xml  StoresFull7290661400001-000-202211020600-000.xml  (+3 more)
xml_to_standard/golden_data_csv/: chains.csv
xml_to_standard/golden_data_csv/prices/: 7290027600007_001.csv  7290055700007_37.csv  7290055700014_0009.csv  7290058140886_1.csv  7290058159628_1.csv  7290058160839_1.csv  7290103152017_001.csv  7290172900007_1.csv  7290455000004_1.csv  7290492000005_450.csv  7290526500006_1.csv  7290696200003_1.csv  7290700100008_001.csv  7290725900003_2.csv  7290785400000_002.csv  7290803800003_1.csv  7290873255550_2.csv  7290876100000_1.csv
xml_to_standard/golden_data_csv/stores/: 7290027600007_18.csv  7290027600007_2.csv  7290027600007_5.csv  7290027600007_7.csv  7290027600007_8.csv  7290055700007_1.csv  7290058108879_1.csv  7290058140886_1.csv  7290058148776_1.csv  7290058159628_1.csv  7290058160839_2.csv  7290058160839_6.csv  7290058160839_9.csv  7290058198450_1.csv  7290455000004_1.csv  7290492000005_1.csv  7290492000005_2.csv  72906390_1.csv  7290661400001_1.csv  7290661400001_3.csv  7290696200003_1.csv  7290700100008_1.csv  7290725900003_1.csv  (+4 more)
xml_to_standard/src/: country_code.rs  xml.rs  xml_to_standard.rs
(+76 files in other folders)
