[package]
name = "israel-prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
scraper = {version = "0.15.0", features = ["atomic"]}
bytes = "1.2.1"
chrono = "0.4.23"
anyhow = "1.0.66"
result-inspect = "0.3.0"
clap = { version = "4.2.4", features = ["derive"] }
walkdir = "2.3.3"
encoding_rs = "0.8.32"
roxmltree = "0.18.0"
serde = "1.0.160"
csv = "1.1.6"
lazy_static = "1.4.0"
multiset = "0.0.5"
counter = "0.5.7"
itertools = "0.10.5"
tracing = "0.1.38"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
serde_with = "3.0.0"

[profile.dev.package."*"]
opt-level = 3

