[package]
name = "processed_data_generator"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
walkdir = "2.3.2"
csv = "1.1.6"
models = { path = "../models" }
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
counter = "0.5.7"
serde_json = "1.0.89"


[[bin]]
name = "processed_data_generator"
path = "src/processed_data_generator.rs"
