[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
scraper = "0.13.0"
bytes = "1.2.1"
chrono = "0.4.23"
anyhow = "1.0.66"
slog-async = "2.7.0"
slog-term = "2.9.0"
slog = "2.7.0"
