[package]
name = "xml_to_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
roxmltree = "0.15.1"
serde = { version = "1.0.147", features = ["derive"] }
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
walkdir = "2.3.2"
csv = "1.1.6"
models = { path = "../models" }

[[bin]]
name = "xml_to_standard"
path = "src/xml_to_standard.rs"
